--- a/docs/visual-basic/misc/bc30034.md
+++ b/docs/visual-basic/misc/bc30034.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30034
 ms.assetid: 46f25ddb-0d9f-48f8-8656-1a880ba8a1ba
-ms.openlocfilehash: f9eb0a605cf224255aa9e0a9fd71e518f2018de9
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 386c93d578364f0bd88cb48dce3bee4f9e70fc2d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53784354"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54513466"
 ---
 # <a name="bracketed-identifier-is-missing-closing-"></a>대괄호로 묶은 식별자에 닫는 ']'가 없습니다.
 이스케이프된 이름의 대괄호는 일치하는 쌍으로 사용해야 합니다.  
@@ -23,5 +23,5 @@ ms.locfileid: "53784354"
   
 -   이스케이프된 이름의 끝에 닫는 대괄호를 추가합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [선언 요소 이름](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
+## <a name="see-also"></a>참고자료
+- [선언 요소 이름](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
