--- a/docs/visual-basic/misc/bc30103.md
+++ b/docs/visual-basic/misc/bc30103.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30103
 ms.assetid: 95982e5e-c3e5-402e-ad7b-4c5076a13869
-ms.openlocfilehash: b7b97ad2a45fcabe38d964fac9f88e191c0ad42b
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: b4f4ae632907ba0f32d0e63ae3d479b17e89acec
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53782768"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54609774"
 ---
 # <a name="-requires-its-left-operand-to-have-a-type-parameter-class-or-interface-type-but-this-operand-has-the-type-lttypegt"></a>'!'의 왼쪽 피연산자는 형식 매개 변수, 클래스 또는 인터페이스 형식 이어야 하는데이 피연산자의 형식은 '&lt;형식&gt;'
 마침표(`!`) 대신 느낌표(`.`)를 사용하는 사전 멤버 액세스는 클래스 또는 인터페이스에서만 유효합니다.  
@@ -23,5 +23,5 @@ ms.locfileid: "53782768"
   
 -   느낌표의 왼쪽에 있는 식을 정의된 클래스 또는 인터페이스 형식으로 평가되는 식으로 바꿉니다.  
   
-## <a name="see-also"></a>참고 항목  
- [코드의 특수 문자](../../visual-basic/programming-guide/program-structure/special-characters-in-code.md)
+## <a name="see-also"></a>참고자료
+- [코드의 특수 문자](../../visual-basic/programming-guide/program-structure/special-characters-in-code.md)
