--- a/docs/visual-basic/misc/bc30126.md
+++ b/docs/visual-basic/misc/bc30126.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30126
 ms.assetid: a522c39e-1f11-45c8-a00b-3546c842909a
-ms.openlocfilehash: c17e8d560e0073344d13bfc91b4619aa917e61e5
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 2e597f7d011a4276f3937eb3349cb2016dad79b6
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53780025"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54607857"
 ---
 # <a name="readonly-property-must-provide-a-get"></a>'ReadOnly' 속성에는 'Get'을 지정해야 합니다.
 속성이 `ReadOnly`로 선언되면 해당 값을 읽기 위한 프로시저를 제공해야 합니다.  
@@ -25,6 +25,6 @@ ms.locfileid: "53780025"
   
 2.  `Property` 선언 내에서 다른 프로시저가 올바르게 종료되었는지 확인합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Property 문](../../visual-basic/language-reference/statements/property-statement.md)  
- [Get 문](../../visual-basic/language-reference/statements/get-statement.md)
+## <a name="see-also"></a>참고자료
+- [Property 문](../../visual-basic/language-reference/statements/property-statement.md)
+- [Get 문](../../visual-basic/language-reference/statements/get-statement.md)
