--- a/docs/visual-basic/misc/bc30636.md
+++ b/docs/visual-basic/misc/bc30636.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30636
 ms.assetid: 37d7115d-0fbf-4ac4-9065-b7580e116bdd
-ms.openlocfilehash: 76de99142b9d5dcf82a227e70739584091088630
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 86aa2e6fb7caf29d6c8fc8452c2a4809de03bcb5
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53763502"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54495762"
 ---
 # <a name="gt-expected"></a>'&gt;' 예상
 지정된 코드에 대한 구문이 잘못되었습니다. 이 오류는 대체로 특성 또는 XML 요소 리터럴에 대한 닫는 꺾쇠 괄호가 없음을 나타냅니다.  
@@ -23,7 +23,7 @@ ms.locfileid: "53763502"
   
 -   사용되는 코드의 구문을 확인합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [특성 개요](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)  
- [선언문](~/docs/visual-basic/programming-guide/language-features/statements.md#declaration-statements)  
- [XML 리터럴](../../visual-basic/language-reference/xml-literals/index.md)
+## <a name="see-also"></a>참고자료
+- [특성 개요](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+- [선언문](~/docs/visual-basic/programming-guide/language-features/statements.md#declaration-statements)
+- [XML 리터럴](../../visual-basic/language-reference/xml-literals/index.md)
