--- a/docs/visual-basic/misc/bc30949.md
+++ b/docs/visual-basic/misc/bc30949.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30949
 ms.assetid: b3d27d9c-7a1f-4bac-ad71-388b24b807b3
-ms.openlocfilehash: 3a691923ea859bf96d3c478e94cb7acbbf88d1b1
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: e3a06552fb7ada6904bd240a3bac9e7a1047928e
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53774630"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54609072"
 ---
 # <a name="array-initializer-cannot-be-specified-for-a-non-constant-dimension-use-the-empty-initializer-"></a>비상수 차원;에 대 한 배열 이니셜라이저를 지정할 수 없습니다. 비어 있는 이니셜라이저를 사용 하 여 '{}'
 배열에서 컴파일 시간에 알려지지 않은 차원을 초기화합니다.  
@@ -42,8 +42,8 @@ Next i
   
 -   상수 차원을 지정할 수 없는 경우 비상수 차원이 알려질 때 루프를 사용하여 배열을 초기화해야 합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [For Each...Next 문](../../visual-basic/language-reference/statements/for-each-next-statement.md)  
- [Visual Basic의 배열](~/docs/visual-basic/programming-guide/language-features/arrays/index.md)  
- [방법: Visual Basic에서 배열 변수 초기화](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)  
- [Visual Basic의 배열 크기](~/docs/visual-basic/programming-guide/language-features/arrays/array-dimensions.md)
+## <a name="see-also"></a>참고자료
+- [For Each...Next 문](../../visual-basic/language-reference/statements/for-each-next-statement.md)
+- [Visual Basic의 배열](~/docs/visual-basic/programming-guide/language-features/arrays/index.md)
+- [방법: Visual Basic에서 배열 변수 초기화](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
+- [Visual Basic의 배열 크기](~/docs/visual-basic/programming-guide/language-features/arrays/array-dimensions.md)
