--- a/docs/visual-basic/misc/bc30954.md
+++ b/docs/visual-basic/misc/bc30954.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30954
 ms.assetid: 796592c4-70b7-45be-9322-db09e9095d7d
-ms.openlocfilehash: 2cc639beeef9647781d76339cea29b7357d60204
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3e39d092ffac5b951aa443d1d08c24dcf1d3b3bf
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53783223"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54522325"
 ---
 # <a name="type-arguments-inferred-for-method-ltprocedurenamegt-result-in-the-following-errors-lterrorlistgt"></a>메서드에 대해 유추 된 형식 인수가 '&lt;procedurename&gt;' 다음 오류를 발생 시킵니다:&lt;errorlist&gt;
 제네릭 프로시저가 형식 인수를 제공하지 않고 호출되었으며 유추된 형식 인수로 인해 하나 이상의 제약 조건 위반이 발생합니다.  
@@ -27,7 +27,7 @@ ms.locfileid: "53783223"
   
 -   컴파일러에서 유추할 필요가 없도록 제네릭 프로시저에 형식 인수를 제공합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)  
- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)
+## <a name="see-also"></a>참고자료
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)
