--- a/docs/visual-basic/misc/bc30962.md
+++ b/docs/visual-basic/misc/bc30962.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30962
 ms.assetid: 6f338158-bfb4-4cc0-bbf7-1111c708613c
-ms.openlocfilehash: afef46b76530ce114bbb5755f39e89879c37a5f0
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: cf48e0869d8cde88f8bbfe5a63bacb41dc9777ca
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53781182"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54519192"
 ---
 # <a name="reference-required-to-assembly-ltassemblyidentitygt-containing-type-lttypenamegt-but-a-suitable-reference-could-not-be-found-due-to-possible-circular-references-ltreferencedependencylistgt"></a>참조 어셈블리에 필요한 '&lt;assemblyidentity&gt;'형식을 포함 하 는'&lt;typename&gt;', 하지만 순환 참조가 발생할 수 있으므로 적합 한 참조를 찾을 수 없습니다: &lt; referencedependencylist&gt;
 식은 프로젝트 외부에 정의된 클래스, 구조체, 인터페이스, 열거형 또는 대리자와 같은 형식을 사용합니다. 그러나 해당 어셈블리에 대한 프로젝트 참조가 순환 참조 집합의 일부입니다.  
@@ -27,7 +27,7 @@ ms.locfileid: "53781182"
   
 -   프로젝트 속성에서 사용 중인 형식을 정의하는 어셈블리를 생성하는 프로젝트에 대한 직접 참조를 추가합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [프로젝트의 참조 관리](/visualstudio/ide/managing-references-in-a-project)  
- [프로젝트 및 솔루션 속성 관리](/visualstudio/ide/managing-project-and-solution-properties)  
- [끊어진 참조 문제 해결](/visualstudio/ide/troubleshooting-broken-references)
+## <a name="see-also"></a>참고자료
+- [프로젝트의 참조 관리](/visualstudio/ide/managing-references-in-a-project)
+- [프로젝트 및 솔루션 속성 관리](/visualstudio/ide/managing-project-and-solution-properties)
+- [끊어진 참조 문제 해결](/visualstudio/ide/troubleshooting-broken-references)
