--- a/docs/visual-basic/misc/bc32015.md
+++ b/docs/visual-basic/misc/bc32015.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32015
 ms.assetid: 6e62fe8d-a875-4995-b6b2-443e75c65e85
-ms.openlocfilehash: 1c5f15c18ffcbf5a4e9a433cdc0e7c9af4744380
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 5f86ed1e3884e07e8e0f51a7121af4f13ebc21d0
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775572"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54610463"
 ---
 # <a name="assembly-or-module-expected"></a>'Assembly' 또는 'Module'이 필요합니다.
 전역 특성은 전체 어셈블리에 적용되는지 또는 현재 모듈에만 적용되는지를 표시하지 않고 지정됩니다. 전역 특성은 `Assembly` 또는 `Module`중 하나를 지정해야 합니다.  
@@ -27,8 +27,8 @@ ms.locfileid: "53775572"
   
 2.  특성을 전역으로 지정하지 않으려는 경우 특성 블록을 삭제하거나 프로그래밍 요소 선언으로 이동합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [어셈블리](../../visual-basic/language-reference/modifiers/assembly.md)  
- [모듈 \<키워드>](../../visual-basic/language-reference/modifiers/module-keyword.md)  
-   
- 
+## <a name="see-also"></a>참고자료
+- [어셈블리](../../visual-basic/language-reference/modifiers/assembly.md)
+- [모듈 \<키워드>](../../visual-basic/language-reference/modifiers/module-keyword.md)
+
+
