--- a/docs/visual-basic/misc/bc33101.md
+++ b/docs/visual-basic/misc/bc33101.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33101
 ms.assetid: b3e0e4e4-87b8-4a38-a450-15233497acaa
-ms.openlocfilehash: e8a4def4d5e12b0594feb3e2ded94a792170cf06
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 4e75077b07cf6b61f4f5aaeedbd732682b92d492
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53760606"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54498988"
 ---
 # <a name="type-lttypenamegt-must-be-a-value-type-or-a-type-argument-constrained-to-structure-in-order-to-be-used-with-nullable-or-nullable-modifier-"></a>형식 '&lt;typeName&gt;' 형식 인수 이거나 값 형식 제약 되어야 '' 'Nullable' 또는 null 허용 한정자 ' 사용 하려면 Structure?'
 구조체가 포함된 값 형식만 nullable로 선언할 수 있습니다.  
@@ -35,5 +35,5 @@ Dim m As Integer?
   
 -   값 데이터 형식을 사용합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Nullable 값 형식](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+## <a name="see-also"></a>참고자료
+- [Nullable 값 형식](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
