--- a/docs/visual-basic/misc/bc36605.md
+++ b/docs/visual-basic/misc/bc36605.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36605
 ms.assetid: d0397b6e-bfc2-400c-92fc-efe82036cfdb
-ms.openlocfilehash: 9c27b1883545d9d80f10e9d1dcd9fe53b20e438f
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: aff92d41f494a09757ee5b9c011cf91cc0bfcf17
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53763177"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54498936"
 ---
 # <a name="by-expected"></a>'By'가 필요합니다.
 `Order By` 또는 `Group By` 절이 `By` 키워드 없이 지정되었습니다.  
@@ -31,9 +31,9 @@ Dim customersByCountry = From cust In customers _
                          Order By CountryName  
 ```  
   
-## <a name="see-also"></a>참고 항목  
- [방법: 쿼리 결과 정렬](../../visual-basic/programming-guide/language-features/linq/how-to-sort-query-results-by-using-linq.md)  
- [Order By 절](../../visual-basic/language-reference/queries/order-by-clause.md)  
- [Group By 절](../../visual-basic/language-reference/queries/group-by-clause.md)  
- [Visual Basic의 LINQ 소개](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
+## <a name="see-also"></a>참고자료
+- [방법: 쿼리 결과 정렬](../../visual-basic/programming-guide/language-features/linq/how-to-sort-query-results-by-using-linq.md)
+- [Order By 절](../../visual-basic/language-reference/queries/order-by-clause.md)
+- [Group By 절](../../visual-basic/language-reference/queries/group-by-clause.md)
+- [Visual Basic의 LINQ 소개](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
+- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
