--- a/docs/visual-basic/misc/bc42019.md
+++ b/docs/visual-basic/misc/bc42019.md
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC42019
 ms.assetid: f61944ba-863b-4a82-aae4-249bda52ec8d
-ms.openlocfilehash: 34456eea019eb6488c6224526a56280c7d52e76b
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 0c7251305d828e2a1abf1a130c51b8dacfcfdd00
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53773096"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54523522"
 ---
 # <a name="operands-of-type-object-used-for-operator-ltoperatorsymbolgt-runtime-errors-could-occur"></a>개체 연산자에 대해 사용 되는 형식의 피연산자가 '&lt;operatorsymbol&gt;' 않으면 런타임 오류가 발생할 수 있습니다
 식이 하나 또는 두 피연산자가 모두 [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md)인 연산자를 사용합니다.  
   
- 변수나 식이 `Object`로 평가되는 경우 컴파일러가 *런타임에 바인딩*을 수행해야 하므로 런타임에 추가 작업이 필요합니다. 또한 응용 프로그램이 잠재적인 런타임 오류에 노출됩니다. 예를 들어 <xref:System.Windows.Forms.Form> 을 `Object` 변수에 할당한 다음 [/ Operator (Visual Basic)](../../visual-basic/language-reference/operators/floating-point-division-operator.md)인 연산자를 사용합니다. 이렇게 하는 경우 Visual Basic이 <xref:System.InvalidCastException> 개체를 숫자 값으로 변환할 수 없기 때문에 런타임에서 <xref:System.Windows.Forms.Form> 을 throw합니다.  
+ 변수나 식이 `Object`로 평가되는 경우 컴파일러가 *런타임에 바인딩*을 수행해야 하므로 런타임에 추가 작업이 필요합니다. 또한 애플리케이션이 잠재적인 런타임 오류에 노출됩니다. 예를 들어 <xref:System.Windows.Forms.Form> 을 `Object` 변수에 할당한 다음 [/ Operator (Visual Basic)](../../visual-basic/language-reference/operators/floating-point-division-operator.md)인 연산자를 사용합니다. 이렇게 하는 경우 Visual Basic이 <xref:System.InvalidCastException> 개체를 숫자 값으로 변환할 수 없기 때문에 런타임에서 <xref:System.Windows.Forms.Form> 을 throw합니다.  
   
  이 메시지는 기본적으로 경고입니다. 경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.  
   
@@ -27,5 +27,5 @@ ms.locfileid: "53773096"
   
 -   가능하면 연산자가 정의된 데이터 형식으로 계산되도록 피연산자를 정렬합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Visual Basic의 산술 연산자](../../visual-basic/programming-guide/language-features/operators-and-expressions/arithmetic-operators.md)
+## <a name="see-also"></a>참고자료
+- [Visual Basic의 산술 연산자](../../visual-basic/programming-guide/language-features/operators-and-expressions/arithmetic-operators.md)
